# ttvy_core

./: Cargo.toml
src/: chat.rs  chat_controller.rs  config.rs  lib.rs
static/: index.html  script.js
