[package]
name = "ttvy_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "^0.7.4", features = ["http1", "json", "tokio"] }
fast_websocket_client = "^0.2.0"
rust-embed = "8.3.0"
serde = { version = "^1.0.197", features = ["std", "derive"] }
serde_json = "^1.0.114"
tokio = { version = "^1.36.0", features = ["full"] }
